# lattice-board

./: .gitignore  LICENSE  README.md
firmware/: Cargo.toml  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/controller/: Cargo.toml
firmware/controller/src/: leds.rs  logging.rs  main.rs  midi.rs  mpe.rs  tuning.rs  usb.rs  util.rs
firmware/controller/src/keys/: direct.rs  mod.rs  shift_reg.rs
firmware/controller/src/layouts/: layout_5x25.rs  mod.rs  prototype.rs
firmware/core/: Cargo.toml
firmware/core/src/: layout.rs  lib.rs  pitch.rs
models/boards/: 5x25.step  prototype.step
models/cases/5x25/: bottom.3mf  bottom.step  button_rods.3mf  top.3mf  top.step
models/cases/prototype/: Top.step  bottom.step  button_rod.step
models/keycaps/: 17mm_key0.step  17mm_key1.step  17mm_keycaps.3mf
models/utils/: SingleSwitch.step  SwitchFitTester.step  TestPair.step
pcb/5x25/: 5x25.kicad_dru  5x25.kicad_pro  5x25.kicad_sch  fp-lib-table  lattice_plugins.py  led_pattern.txt  matrix_pattern.txt  sym-lib-table
pcb/5x25/production/: medium_bom.csv  medium_designators.csv  medium_positions.csv  netlist.ipc
pcb/lib/: LatticeBoard.bak  LatticeBoard_Prototype.kicad_sym
pcb/lib/LatticeBoard.pretty/: C_0603_1608Metric.kicad_mod  D_SOD-323F.kicad_mod  MountingHole_2.2mm_M2_Pad.kicad_mod  RP2040-Zero.kicad_mod  R_0402_1005Metric.kicad_mod  SK6803-MINI-E.kicad_mod  SW_MX_17.kicad_mod  TSSOP-16.kicad_mod
pcb/prototype/: prototype.kicad_dru  prototype.kicad_pcb  prototype.kicad_prl  prototype.kicad_pro  prototype.kicad_sch
(+6 files in other folders)
