[package]
edition = "2021"
name = "lattice-board-controller"
version = "0.1.0"
license = "MIT OR Apache-2.0"
resolver = "2"

[[bin]]
name = "lattice-board-controller"
path = "src/main.rs"
test = false
doctest = false

[features]
default = ["layout-prototype"]
layout-prototype = []
layout-5x25 = []

[dependencies]
lattice-board-core = { path = "../core" }
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.7", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "task-arena-size-32768",
] }

embassy-time = { version = "0.4", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.4", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
embassy-usb = { version = "0.4", features = ["defmt"] }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-futures = { version = "0.1" }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
wmidi = { version = "4.0.10", default-features = false }
smart-leds = "0.4.0"
log = "0.4.29"
heapless = "0.8"
micromath = "2.1.0"
fixed = "1.29.0"
ws2812-pio = "0.9.0"
